# polymarketing-trading-final

./: .dockerignore  .gitignore  ADDRESS_SETUP.md  BOT_STATUS_ANSWER.md  BOT_STRATEGY.md  BOT_TRADING_INFO.md  CHECK_BOT_STATUS.sh  CLIENT_MESSAGE.md  CLIENT_READY.md  COMMANDS.md  DIAGNOSE_BOT_ISSUES.md  FIXES_APPLIED.md  FIX_ENUM_ERROR.md  HOW_TO_FETCH_MARKETS.md  HOW_TO_RUN.md  HOW_TO_VERIFY_BOT.md  METAMASK_SETUP.md  MM_BOT_INTEGRATION.md  QUESTIONS_FOR_BOT_DEVELOPER.md  QUICK_FIX_ALLOWANCE.md  QUICK_START.md  README_START_HERE.md  REFRESH_INSTRUCTIONS.md  RESET_TEST_ORDER.md  SETUP_GUIDE.md  SETUP_MARKET_CONFIG.sh  START_TRADING.sh  STOP_TRADING.sh  TESTING_GUIDE.md  TEST_ENDPOINT.md  VERIFY_WALLET_CONNECTION.md  VPS_CONFIGURATION_SUMMARY.md  VPS_FIX_INSTRUCTIONS.md  VPS_SETUP.md  alembic.ini  check_active_markets.sh  check_all_config.py  check_bot_connection.sh  check_why_no_active_markets.sh  docker-compose.yml  (+5 more)
alembic/: env.py  script.py.mako
alembic/versions/: 20241112_0001_initial.py  20241120_0002_change_bot_run_status_to_varchar.py
app/: __init__.py  settings.py
app/api/: __init__.py  main.py  utils.py
app/config/: __init__.py  (+3 more)
data_updater/: trading_utils.py
docker/: backend.Dockerfile  entrypoint.sh  prometheus.yml  web.Dockerfile
docs/: CURRENT_STATUS.md  IMMEDIATE_TESTING_GUIDE.md  NEXT_STEPS.md  TESTING_CHECKLIST.md  deployment.md
poly_data/: data_processing.py  data_utils.py  global_state.py  polymarket_client.py  trading_utils.py  utils.py  websocket_handlers.py
web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
(+102 files in other folders)
